k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: throttl
  labels:
    name: throttl
    app: throttl-platform
